# guard.ai

./: .gitattributes  .gitignore  README.md  install.sh  pyproject.toml  requirements.txt
.github/workflows/: guardai.yml
guardai/: __init__.py  anomaly.py  cli.py  config.py  database.py  feeds.py  manifests.py  scanner.py  updater.py
systemd/: guardai-update.service  guardai-update.timer
tests/: test_core.py
