[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "guardai"
version = "0.1.0"
description = "Defensiver Schwachstellen- und Anomalie-Scanner mit CVE-Feeds und ML-Heuristik"
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["requests>=2.31"]

[project.optional-dependencies]
ml = ["scikit-learn>=1.3", "numpy>=1.24"]

[project.scripts]
guardai = "guardai.cli:main"

[tool.setuptools]
packages = ["guardai"]
